--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-weight: 500;
     font-style: normal;
     background-color: beige;
-    format(ttf)
+    format('truetype')
 }
 
 #Neko {
