--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ body {
 
 @font-face {
     font-family: Byker;
-    src: url("https://use.typekit.net/nuq3qmj.css")
-        format('ttf')
+    src: url("https://use.typekit.net/nuq3qmj.css") format('truetype')
 
 }
 
