--- a/style.css
+++ b/style.css
@@ -1,24 +1,51 @@
-html {
-    text-align: center;
-    font-family: Byker, sans-serif;
+.hello {
+  text-align: center;
+  font-family: Poppins, sans-serif;
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+}
+
+nav {
+  margin: auto;
+  width: 60%;
+  border: 1px solid white;
+  padding: 10px;
+}
+nav .nav-text {
+  text-align: center;
+  font-size: 20px;
+  padding: 4px 13px;
+  margin: auto;
+  font-family: Poppins, sans-serif;
+  font-weight: normal;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  display: inline-block;
+}
+
+body {
+  background: #0575e6;
+  background: linear-gradient(90deg, #021b79, #0575e6);
+}
+
+/* html {
+  text-align: center;
+  font-family: Byker, sans-serif;
 }
 body {
-    background-color: beige;
-    format('truetype')
+  background-color: beige;
 }
 
 #Neko {
-    height: 200px;
-    border: solid;
-    padding: 10px;
+  height: 200px;
+  border: solid;
+  padding: 10px;
 }
 
 .socials {
-    height: 30px;
+  height: 30px;
 }
 
 #Header {
-    font-weight: lighter;
-}
-
-
+  font-weight: lighter;
+} */
